add licensing, instructions to readme